k8s/vuejs/vuejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuejs
spec:
  replicas: 1
  selector:
    matchLabels:
      component: vuejs
  template:
    metadata:
      labels:
        component: vuejs
    spec:
      containers:
        - name: vuejs
          image: ghcr.io/pan-bellias/ref-letters-client
          ports:
            - containerPort: 80
          imagePullPolicy: Always
