k8s/vuejs/vuejs-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuejs-clip
spec:
  type: ClusterIP
  selector:
    component: vuejs
  ports:
    - port: 80
      targetPort: 80
