k8s/vuejs/vuejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuejs-ingress
spec:
  rules:
  - host: "devops2k8s.ddns.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vuejs-clip
            port:
              number: 80
